--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:name=".App"
         android:allowBackup="false"
         android:supportsRtl="true"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
